fix: aside no overflow-y auto and display none to the text menu in the aside

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@
 
 .main-content {
     height: calc(100vh - 4.375rem);
-    overflow-y: auto;
 }
 
 aside {
@@ -39,6 +38,7 @@ aside {
 main {
     width: 100%;
     height: 100%;
+    overflow-y: auto;
 }
 
 /*----------------------
@@ -89,9 +89,39 @@ header .container-fluid {
         ASIDE
 ------------------------*/
 
+aside {
+    background-color: #051e34;
+    background-image: url('./img/sidebar-bg.png');
+}
+
+.ms-menu-aside {
+    height: 100%;
+    padding-top: 1.5rem;
+    padding-left: 0;
+}
+
+.ms-menu-aside li {
+    list-style: none;
+    padding-bottom: 1rem;
+}
+
+.ms-menu-aside a {
+    text-decoration: none;
+    color: #fff;
+}
+
+
 /*----------------------
         MAIN
 ------------------------*/
+
+main {
+    background-color: #f8f9fa;
+}
+
+.ms-top-bar {
+    background-color: #1b72e8;
+}
 
 /*----------------------
     MEDIA QUERY => 768px md
